--- a/dbt/covid_transform/dbt_project.yml
+++ b/dbt/covid_transform/dbt_project.yml
@@ -1,4 +1,3 @@
-
 # Name your project! Project names should contain only lowercase characters
 # and underscores. A good package name should reflect your organization's
 # name or the intended use of these models
@@ -11,7 +10,7 @@ profile: 'covid_transform'
 # These configurations specify where dbt should look for different types of files.
 # The `model-paths` config, for staging, states that models in this project can be
 # found in the "models/" directory. You probably won't need to change these!
-model-paths: ["models/staging","models/marts"]
+model-paths: ["models"]
 #analysis-paths: ["analyses"]
 #test-paths: ["tests"]
 #seed-paths: ["seeds"]
