--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,56 +1,12 @@
-# Licensed to the Apache Software Foundation (ASF) under one
-# or more contributor license agreements.  See the NOTICE file
-# distributed with this work for additional information
-# regarding copyright ownership.  The ASF licenses this file
-# to you under the Apache License, Version 2.0 (the
-# "License"); you may not use this file except in compliance
-# with the License.  You may obtain a copy of the License at
-#
-#   http://www.apache.org/licenses/LICENSE-2.0
-#
-# Unless required by applicable law or agreed to in writing,
-# software distributed under the License is distributed on an
-# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
-# KIND, either express or implied.  See the License for the
-# specific language governing permissions and limitations
-# under the License.
-#
-
-# Basic Airflow cluster configuration for CeleryExecutor with Redis and PostgreSQL.
-#
-# WARNING: This configuration is for local development. Do not use it in a production deployment.
-#
-# This configuration supports basic configuration using environment variables or an .env file
-# The following variables are supported:
-#
-# AIRFLOW_IMAGE_NAME           - Docker image name used to run Airflow.
-#                                Default: apache/airflow:3.0.1
-# AIRFLOW_UID                  - User ID in Airflow containers
-#                                Default: 50000
-# AIRFLOW_PROJ_DIR             - Base path to which all the files will be volumed.
-#                                Default: .
-# Those configurations are useful mostly in case of standalone testing/running Airflow in test/try-out mode
-#
-# _AIRFLOW_WWW_USER_USERNAME   - Username for the administrator account (if requested).
-#                                Default: airflow
-# _AIRFLOW_WWW_USER_PASSWORD   - Password for the administrator account (if requested).
-#                                Default: airflow
-# _PIP_ADDITIONAL_REQUIREMENTS - Additional PIP requirements to add when starting all containers.
-#                                Use this option ONLY for quick checks. Installing requirements at container
-#                                startup is done EVERY TIME the service is started.
-#                                A better way is to build a custom image or extend the official image
-#                                as described in https://airflow.apache.org/docs/docker-stack/build.html.
-#                                Default: ''
-#
-# Feel free to modify this file to suit your needs.
----
 x-airflow-common:
   &airflow-common
   # In order to add custom dependencies or upgrade provider distributions you can use your extended image.
   # Comment the image line, place your Dockerfile in the directory where you placed the docker-compose.yaml
   # and uncomment the "build" line below, Then run `docker-compose build` to build the images.
   image: ${AIRFLOW_IMAGE_NAME:-apache/airflow:3.0.1}
-  # build: .
+  build: .
+#    context: .
+#    dockerfile: Dockerfile
   environment:
     &airflow-common-env
     AIRFLOW__CORE__EXECUTOR: CeleryExecutor
@@ -60,7 +16,7 @@ x-airflow-common:
     AIRFLOW__CELERY__BROKER_URL: redis://:@redis:6379/0
     AIRFLOW__CORE__FERNET_KEY: ''
     AIRFLOW__CORE__DAGS_ARE_PAUSED_AT_CREATION: 'true'
-    AIRFLOW__CORE__LOAD_EXAMPLES: 'true'
+    AIRFLOW__CORE__LOAD_EXAMPLES: 'false'
     AIRFLOW__CORE__EXECUTION_API_SERVER_URL: 'http://airflow-apiserver:8080/execution/'
     # yamllint disable rule:line-length
     # Use simple http server on scheduler for health checks
@@ -73,10 +29,13 @@ x-airflow-common:
     # The following line can be used to set a custom config file, stored in the local config folder
     AIRFLOW_CONFIG: '/opt/airflow/config/airflow.cfg'
   volumes:
+#    - /var/run/docker.sock:/var/run/docker.sock
     - ${AIRFLOW_PROJ_DIR:-.}/dags:/opt/airflow/dags
     - ${AIRFLOW_PROJ_DIR:-.}/logs:/opt/airflow/logs
+    - ${AIRFLOW_PROJ_DIR:-.}/dbt/covid_transform:/opt/airflow/dbt/covid_transform
     - ${AIRFLOW_PROJ_DIR:-.}/config:/opt/airflow/config
     - ${AIRFLOW_PROJ_DIR:-.}/plugins:/opt/airflow/plugins
+#    - dbt_project:/opt/airflow/dbt/covid_transform
   user: "${AIRFLOW_UID:-50000}:0"
   depends_on:
     &airflow-common-depends-on
@@ -112,18 +71,22 @@ services:
         POSTGRES_DB: covid
     ports:
       - "5432:5432"
+#    volumes:
+#      - postgres-db-volume:/var/lib/postgresql/data
     networks:
        - covid_net
 
-  loader:
-    image: python:3.12                # a plain Python image
-    working_dir: /usr/src/app
-    volumes:
-      - ./covid.py:/usr/src/app/covid.py    # mount your script
-      - ./requirements.txt:/usr/src/app/requirements.txt
-    command: [ "bash", "-c", "pip install sqlalchemy psycopg2-binary pandas wget && python covid.py" ]
-    depends_on:
-      - covid_postgres
+#  loader:
+#    image: python:3.12                # a plain Python image
+#    working_dir: /app
+#    volumes:
+#      - ./covid.py:/app/covid.py    # mount your script
+#      - ./requirements.txt:/usr/src/app/requirements.txt
+##    command: [ "bash", "-c", "pip install sqlalchemy psycopg2-binary pandas requests && python covid.py" ]
+#    depends_on:
+#      - covid_postgres
+#    entrypoint: [ "python" ]               # run Python as the entrypoint
+#    command: [ "/app/covid.py" ]
 
   pgadmin:
     container_name: pgadmin_container
@@ -393,12 +356,9 @@ services:
         - covid_postgres
       volumes:
         - ./dbt/covid_transform:/usr/app/dbt
-
       working_dir: /usr/app/dbt
-
-      environment:
-            DBT_PROFILES_DIR: /usr/app/dbt
-
+#      environment:
+#            DBT_PROFILES_DIR: /usr/app/dbt
       entrypoint: [ "dbt" ]
       command: ["debug"]
       networks:
@@ -406,6 +366,7 @@ services:
 
 volumes:
   postgres-db-volume:
+
 networks:
   covid_net:
     driver: bridge
