--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -35,6 +35,8 @@ x-airflow-common:
     - ${AIRFLOW_PROJ_DIR:-.}/dbt/covid_transform:/opt/airflow/dbt/covid_transform
     - ${AIRFLOW_PROJ_DIR:-.}/config:/opt/airflow/config
     - ${AIRFLOW_PROJ_DIR:-.}/plugins:/opt/airflow/plugins
+#    - tmp:/tmp
+#    - xcoms:/opt/airflow/xcoms
 #    - dbt_project:/opt/airflow/dbt/covid_transform
   user: "${AIRFLOW_UID:-50000}:0"
   depends_on:
@@ -120,7 +122,7 @@ services:
     <<: *airflow-common
     command: api-server
     ports:
-      - "8080:8080"
+      - "8085:8080"
     healthcheck:
       test: ["CMD", "curl", "--fail", "http://localhost:8080/api/v2/version"]
       interval: 30s
@@ -151,6 +153,25 @@ services:
         condition: service_completed_successfully
     networks:
        - covid_net
+
+  airflow-webserver:
+    <<: *airflow-common
+    command: webserver
+    ports:
+      - "8085:8080"
+    healthcheck:
+      test: [ "CMD", "curl", "--fail", "http://localhost:8080/health" ]
+      interval: 30s
+      timeout: 10s
+      retries: 5
+      start_period: 30s
+    restart: always
+    depends_on:
+      <<: *airflow-common-depends-on
+      airflow-init:
+        condition: service_completed_successfully
+    networks:
+      - covid_net
 
   airflow-dag-processor:
     <<: *airflow-common
@@ -366,6 +387,7 @@ services:
 
 volumes:
   postgres-db-volume:
+
 
 networks:
   covid_net:
